--- a/themes/minecraft/css/style.css
+++ b/themes/minecraft/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: pink;
+    background-color: #EAE6E5;
 }
 
 * {
@@ -105,7 +105,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 img {
-    max-width: 100%;
+    /* max-width: 100%; */
+    width: 200px;
 }
 
 /* BELOW ARE PREPARED STYLES FOR CODE/PRE/BLOCKQUOTE, FEEL FREE TO REMOVE IT  */
@@ -155,8 +156,8 @@ blockquote {
 
 .nav li:last-child{
     background-color: red;
-}
+} */
 
 .nav li:hover{
-    background-color: orange;
-} */
+    background-color: #8FCB9B;
+}
