--- a/themes/kmom04/css/style.css
+++ b/themes/kmom04/css/style.css
@@ -6498,6 +6498,11 @@ img {
   font-size: 2em;
 }
 
+.excel {
+  width: 100%;
+  height: 750px;
+}
+
 blockquote {
   font-style: italic;
   margin-left: 1em;
