--- a/themes/kmom05/css/style.css
+++ b/themes/kmom05/css/style.css
@@ -6426,33 +6426,33 @@ p {
   font-family: "Playfair Display", serif;
   text-decoration: none;
   font-size: 1.2rem;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Lato", sans-serif;
   text-decoration: none;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 .title {
   text-decoration: none;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 .title h1 {
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 .title p {
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 .title a {
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 .nav a {
   text-decoration: none;
   font-family: "Playfair Display", serif;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 .nav a:hover {
@@ -6468,7 +6468,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-  background-color: rgb(235, 235, 235);
+  background-color: #053022;
   margin: 0 20px;
 }
 
@@ -6491,7 +6491,7 @@ img {
 
 .social a {
   text-decoration: none;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 .social i {
@@ -6591,4 +6591,32 @@ pre code {
   .tech-menu {
     display: none;
   }
+}
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .gallery {
+    grid-template-columns: 1fr;
+  }
+}
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
